@@ -37,6 +37,7 @@ https://github.com/elastic/beats/compare/v6.4.1...6.4[Check the HEAD diff]
 
 *Metricbeat*
 
+- Recover metrics for old apache versions removed by mistake on #6450. {pull}7871[7871]
 - Avoid mapping issues in kubernetes module. {pull}8487[8487]
 
 *Packetbeat*
